# KentroXAI

./: .gitignore  README.md  TEST1_SYNC_MARKER.md  config.yaml  databricks.yml  embed_silver_chunks.py  pyproject.toml  rag_answer_trust_job.py
apps/kentro-chat/: README.md  app.yaml  package-lock.json  package.json
artifacts/20260218T135031Z/: eval_results.json  reasoning_report.md  redteam_findings.json  scorecard.html  scorecard.json  scorecard.md  telemetry.jsonl
artifacts/20260218T135032Z/: scorecard.html  scorecard.json  scorecard.md  telemetry.jsonl
artifacts/20260218T135057Z/: scorecard.html  scorecard.json  scorecard.md  telemetry.jsonl
artifacts/20260218T140011Z/: eval_results.json  reasoning_report.md  scorecard.html  scorecard.json  scorecard.md  telemetry.jsonl
artifacts/20260218T140616Z/: reasoning_report.md  scorecard.html  scorecard.json  scorecard.md  telemetry.jsonl
artifacts/20260218T140652Z/: reasoning_report.md  scorecard.html  scorecard.json  scorecard.md  telemetry.jsonl
artifacts/20260218T140703Z/: reasoning_report.md  telemetry.jsonl
artifacts/20260218T140926Z/: scorecard.html  scorecard.json  scorecard.md  telemetry.jsonl
artifacts/20260218T140934Z/: scorecard.html  scorecard.json  scorecard.md  telemetry.jsonl
artifacts/20260218T141806Z/: eval_results.json  prompt_run.json  reasoning_report.md  scorecard.html  scorecard.json  scorecard.md  telemetry.jsonl
artifacts/20260218T142016Z/: eval_results.json  prompt_run.json  reasoning_report.md  redteam_findings.json  scorecard.html  scorecard.json  scorecard.md  telemetry.jsonl
artifacts/20260218T143524Z/: artifact_manifest.json  artifact_manifest.md  eval_results.json  incident_report.json  incident_report.md  lineage_report.md  monitoring_summary.json  prompt_run.json  reasoning_report.json  reasoning_report.md  redteam_findings.json  redteam_summary.json  (+5 more)
benchmarks/: openai_metric_registry.json
configs/: demo_config.yaml  demo_context.json
demo/: ARTIFACT_GUIDE.md  DEMO_SCRIPT.md  DEMO_WALKTHROUGH.md  LIVE_DEMO_CHECKLIST.md  README.md  index.html
docs/: databricks_integration.md  scorecard.html  scorecard.json
resources/: trusted_ai_toolkit_job.yml
scripts/: demo_prep.sh  smoke_test_llm_rationalization.py  verdict_impact_demo.py
suites/: high.yaml  rag_live.yaml
tests/: demo_smoke_test.py  test_answer_verdict.py  test_artifacts.py  test_config.py  test_contradiction_heuristic.py  test_databricks_pipeline.py  test_eval.py  test_evidence_confidence.py  test_jobs.py  test_llm_rationalization.py  test_model_client.py  test_reporting.py  test_run_prompt.py  test_score_aggregation.py
(+110 files in other folders)
