[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trusted_ai_toolkit"
version = "0.1.0"
description = "Trusted AI evaluation, answer trust, and evidence-pack orchestration toolkit."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Kentro" },
]
keywords = [
  "ai-governance",
  "answer-trust",
  "evaluation",
  "rag",
  "xai",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
]
dependencies = [
  "jinja2>=3.1.0",
  "pydantic>=2.6.0",
  "PyYAML>=6.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.8.0",
  "build>=1.2.2",
  "mypy>=1.11.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
]
databricks = [
  "databricks-connect>=16.1.1",
  "databricks-sdk>=0.46.0",
  "pyspark>=3.5.5",
]
all = [
  "black>=24.8.0",
  "build>=1.2.2",
  "databricks-connect>=16.1.1",
  "databricks-sdk>=0.46.0",
  "mypy>=1.11.0",
  "pyspark>=3.5.5",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
]

[project.scripts]
tat = "trusted_ai_toolkit.cli:main"
tat-databricks-job = "trusted_ai_toolkit.jobs:main"

[project.urls]
Repository = "https://github.com/ethanhall2222/KentroXAI"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["trusted_ai_toolkit*", "tat*"]

[tool.setuptools.package-data]
trusted_ai_toolkit = [
  "eval/suites/*.yaml",
  "templates/*.j2",
]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "B",
  "E",
  "F",
  "I",
  "N",
  "UP",
  "W",
]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["N802", "N803", "N806"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
ignore_missing_imports = true
exclude = [
  "src/trusted_ai_toolkit.egg-info/",
]

[tool.pytest.ini_options]
addopts = "-p no:debugging"
pythonpath = [
  ".",
  "src",
]
testpaths = [
  "tests",
]

[tool.coverage.run]
branch = true
source = [
  "src/trusted_ai_toolkit",
  "src/tat",
]

[tool.coverage.report]
skip_covered = true
show_missing = true
